# color_transforms

./: README.md  pyproject.toml
docs/: YUV_quantization.ipynb  color_redundancy.ipynb  index.html  texput.tex
docs/3DCT/: 3DCT_matrix.ipynb  3DCT_over_RGB.ipynb  README.md  index.html  texput.tex
docs/3DCT/HTML/: Makefile  index.html  texput.tex
docs/3DCT/HTML/graphics/: DCT_basis.ipynb  Makefile
docs/3DCT/notebooks/: 3DCT.ipynb  3DCT_matrix.ipynb  3DCT_over_RGB.ipynb  color-DCT_compression.ipynb
docs/DCT/HTML/: README.md  index.html  texput.tex
docs/DCT/HTML/graphics/: Makefile
docs/DCT/notebooks/: color_DCT.ipynb  color_DCT_matrix.ipynb
docs/RGB/: RGB_SQ.ipynb
docs/YCoCg/: README.md  YCoCg_matrix.ipynb  YCoCg_over_RGB.ipynb  index.css  index.html  texput.tex
docs/YCoCg/HTML/: index.css  index.html  texput.tex
docs/YCoCg/notebooks/: YCoCg_over_RGB.ipynb
docs/YCrCb/: README.md  YCrCb_over_RGB.ipynb  index.css  index.html
docs/YCrCb/HTML/: index.css  index.html  texput.tex
docs/YCrCb/notebooks/: YCrCb_over_RGB.ipynb
src/color_transforms/: DCT.py  YCoCg.py  YCrCb.py  test_YCoCg.py
